--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,81 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" id="teddymuller">
+  <div class="picture-tm container">
+    <h1 class="banner__title">Hello! I'm Teddy.</h1>
+    <p class="banner__content">Full Stack Junior developer with a preference<br> for the front end and an attraction for design.</p>
+    <a href="#contact" class="banner__link">Curious to know more?</a>
+  </div>
+</div>
+<div class="container portfolio" id="portfolio">
+  <h2 class="portfolio__title">Portfolio</h2>
+  <h3 class="portfolio__check">Check it out</h3>
+  <hr>
+  <ul class="cards">
+    <li class="card">
+      <a href="http://www.myinvest.shop" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1670506228/development/MI_xerwzg.png" alt="" class="card__img card__img--full"></a>
+      <h4 class="card__title"><a href="http://www.myinvest.shop" class="" target="_blank">My invest</a></h4>
+    </li>
+    <li class="card">
+      <a href="http://www.certificate2022-teddymuller.art" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674680034/Portfolio/Capture_d_e%CC%81cran_2023-01-25_a%CC%80_21.53.27_mna3xe.png" alt="" class="card__img card__img--full"></a>
+      <h4 class="card__title"><a href="http://www.certificate2022-teddymuller.art" class="" target="_blank">My Garden Manager Certification</a></h4>
+    </li>
+    <li class="card">
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
+      <h4 class="card__title"><a href="#" class="" target="">Botloc</a></h4>
+    </li>
+    <li class="card">
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
+      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    </li>
+  </ul>
+</div>
+<div class="container" id="kindwords">
+  <div>
+    <h2 class="portfolio__title">Kind Words</h2>
+    <h3 class="portfolio__check">Some nice things smart people I’ve worked with have to say about me</h3>
+    <hr>
+  </div>
+  <div>
+    <ul class="cards-kind">
+      <li class="card-kind">
+        <div class="card-kind-int">
+          <p>“I had the pleasure to have Teddy as the student during our last bootcamp in web developpement on the Wagon Nice campus, from the very first days Teddy has shown great implication for the program. He has proved during the projects also that he can be a great leader since he was the one who managed the project team he was working with. Thanks to the project, Teddy has been able to develop strong competencies in coding especially on the front end part. I strongly recommend Teddy as a front end developer.”</p>
+          <div class="card-kind-info">
+            <img src="https://ca.slack-edge.com/T02NE0241-U023HKQQCCS-8af6e4dca667-512" alt="" class="avatar-xlarge">
+            <h5>Caroline Bayle <br> City Manager WAGON Nice</h5>
+          </div>
+        </div>
+      </li>
+      <li class="card-kind">
+        <div class="card-kind-int">
+          <p>“Grâce à sa forte compréhension du code, Teddy trouve rapidement une solution aux problèmes rencontrés.”</p>
+          <div class="card-kind-info">
+            <img src="https://ca.slack-edge.com/T02NE0241-U03CN9B56AG-321aabeed0ad-192" alt="" class="avatar-xlarge">
+            <h5>Léo Prieto <br> Teacher Wagon Nice</h5>
+          </div>
+        </div>
+      </li>
+      <li class="card-kind">
+        <div class="card-kind-int">
+          <p>“I had the pleasure of accompanying Teddy in his Web Application Developer training for several sessions, and it is a curious element, which will seek the answer or the unlock. I also noted that it is an assiduous element, and punctual. He will make an excellent recruit for his future employers!”</p>
+          <div class="card-kind-info">
+            <img src="https://ca.slack-edge.com/T02NE0241-U03CR5KQE3E-c5dec9cf6471-192" alt="" class="avatar-xlarge">
+            <h5>Guillaume Genet <br> Teacher Wagon Nice</h5>
+          </div>
+        </div>
+      </li>
+      <li class="card-kind">
+        <div class="card-kind-int">
+          <p>“Recommandation coming !!!”</p>
+          <div class="card-kind-info">
+            <img src="https://ca.slack-edge.com/T02NE0241-U026X5M7BHB-e0c63f662462-192" alt="" class="avatar-xlarge">
+            <h5>Fabrice Tuilliere <br> Batch Manager WAGON Nice</h5>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
+<div class="picture-band" id="work">
+  <p><strong>You have a project?</strong></p>
+  <a href="https://www.malt.fr/profile/teddymuller" class="btn-malt" target="_blank">Malt!</a>
+</div>
