--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,60 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ladybirdbydc</title>
+    <title>Teddy MULLER</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+
+    <%# FontAwsome Teddy %>
+    <script src="https://kit.fontawesome.com/825d467ba9.js" crossorigin="anonymous"></script>
+
+      <%# META %>
+      <title>Teddy MULLER</title>
+      <meta name="description" content="Full Stack Web Developer">
+      <link rel="shortcut icon" href="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675071355/Portfolio/me1_xkm4qu.png" type="image/x-icon" class="avatar-meta">
+        <!-- Facebook Open Graph data -->
+      <meta property="og:title" content="Teddy Muller - Full Stack Web Developer" />
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="www.teddymuller.com" />
+      <meta property="og:image" content="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674630948/Portfolio/teddy_hnonul.jpg" />
+      <meta property="og:description" content="Full Stack Web Developer" />
+      <meta property="og:site_name" content="Teddy MULLER" />
+
+      <!-- Twitter Card data -->
+      <meta name="twitter:card" content="summary_large_image">
+      <meta name="twitter:site" content="www.teddymuller.com">
+      <meta name="twitter:title" content="Teddy Muller - Full Stack Web Developer">
+      <meta name="twitter:description" content="Full Stack Web Developer">
+      <meta name="twitter:creator" content="">
+      <meta name="twitter:image:src" content="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675071355/Portfolio/me1_xkm4qu.png">
+
+      <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+      <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+      <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+      <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+      <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+      <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+      <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+      <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+      <link rel="manifest" href="/manifest.json">
+      <meta name="msapplication-TileColor" content="#ffffff">
+      <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+      <meta name="theme-color" content="#ffffff">
+
   </head>
 
   <body>
+    <%= render "shared/navbar" %>
     <%= yield %>
+    <%= render "shared/footer" %>
   </body>
 </html>
