--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,4 +9,12 @@
 
 // Your CSS partials
 @import "components/index";
+@import "components/portfolio";
+@import "components/kindwords";
+@import "components/footer";
 @import "pages/index";
+@import "pages/home";
+
+body{
+  background-color: white;
+}
