--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -6,6 +6,10 @@
   width: 56px;
   border-radius: 50%;
 }
+.avatar-xlarge {
+  width: 64px;
+  border-radius: 50%;
+}
 .avatar-bordered {
   width: 40px;
   border-radius: 50%;
@@ -17,4 +21,7 @@
   border-radius: 0px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
+}
+.avatar-meta {
+  border-radius: 50%;
 }
