--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,11 +1,11 @@
-.nav {
+.footer {
   font-family: "Proxima Nova", sans-serif;
   display: flex;
   justify-content: space-between;
   padding: 20px 0 10px 0;
   background-color: #F8F9FA;
 }
-.item-ted {
+.item-2022 {
   ul{
     display: flex;
     flex-direction: row;
@@ -23,13 +23,14 @@
         opacity: 1;
         text-decoration: underline;
       }
+    p{
+      font-size: 20px;
+      color: #000000;
+    }
     }
   }
 }
-.item {
-  &--menu{
-    text-align: right;
-  }
+.item-contact {
   ul{
     display: flex;
     flex-direction: row;
@@ -49,43 +50,4 @@
       }
     }
   }
-  .btn-menu{
-    color: #1AABAC;
-    border: none;
-    background-color: #F8F9FA;
-    font-size: 25px;
-    @media screen and (min-width: 768px){
-      display: none;
-    }
-  }
-  .menu{
-    list-style: none;
-    display: flex;
-    padding: 0;
-    @media screen and (max-width: 768px){
-      display: none;
-      }
-    li{
-      margin: 0 10px;
-    }
-  }
-  .menu-open {
-    display: block;
-    li{
-      color: white;
-    }
-  }
-  // .menu li{
-  //   margin: 0 10px;
-  // }
-
-  // .menu-open li {
-  //   color: white;
-  // }
-}
-.position{
-  position: fixed;
-  overflow: hidden;
-  width: 100%;
-  z-index: 1;
 }
