--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,71 @@
-// Specific CSS for your home-page
+
+.picture-tm{
+  font-family: "Proxima Nova", sans-serif;
+  height: 600px;
+  width: 100%;
+  padding-top: 200px;
+  color: white;
+}
+.banner{
+  &__title{
+    font-size: 50px;
+    color: white;
+  }
+  &__content{
+    font-size: 20px;
+    font-weight: bold;
+  }
+  &__link{
+    font-size: 20px;
+    color: white;
+    &:hover{
+      color:#EC2E57;
+    }
+  }
+}
+#teddymuller{
+  background-image: url(https://res.cloudinary.com/dezfv3vmn/image/upload/v1674630948/Portfolio/teddy_hnonul.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.picture-band{
+  font-family: "Proxima Nova", sans-serif;
+  height: 400px;
+  width: 100%;
+  color: white;
+  margin: 100px 0 0px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  p{
+    font-size: 30px;
+    font-weight: bold;
+  }
+  a{
+    margin-left: 40px;
+    font-size: 20px;
+    color: white;
+  }
+}
+
+.btn-malt{
+  font-family:'Courier New', Courier, monospace;
+  font-weight:bold;
+  background-color:  #1AABAC;
+  color: white;
+  padding: 15px 25px;
+  border-radius: 4px;
+  opacity: 1;
+  &:hover{
+    opacity: 0.5;
+  }
+  &:after{
+    color: #EC2E57;
+  }
+}
+
+#work{
+  background-image: url(https://res.cloudinary.com/dezfv3vmn/image/upload/v1674640423/Portfolio/bandeau_dlnppu.jpg);
+}
