--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" id="teddymuller">
   <div class="picture-tm container">
-    <h1 class="banner__title">Hello! I'm Teddy.</h1>
-    <p class="banner__content">Full Stack Junior developer with a preference<br> for the front end and an attraction for design.</p>
+    <h1 class="banner__title">Hello! I'm Doriane.</h1>
+    <p class="banner__content">I love my Teddy's GOD<br> he's the Best</p>
     <a href="#contact" class="banner__link">Curious to know more?</a>
   </div>
 </div>
