--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -24,7 +24,7 @@
   }
 }
 #teddymuller{
-  background-image: url(https://res.cloudinary.com/dezfv3vmn/image/upload/v1674630948/Portfolio/teddy_hnonul.jpg);
+  background-image: url(https://img.freepik.com/photos-gratuite/fond-aquarelle-peint-main-forme-ciel-nuages_24972-1095.jpg?w=740&t=st=1675873365~exp=1675873965~hmac=3333ecb230887b4eb153cef53771d5ba492270c51411e90b7403685ee8becac2);
   background-repeat: no-repeat;
   background-size: cover;
 }
