--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,14 @@
     <script src="https://kit.fontawesome.com/825d467ba9.js" crossorigin="anonymous"></script>
 
       <%# META %>
-      <title>Teddy MULLER</title>
+      <title>Doriane CHATELAIN</title>
       <meta name="description" content="Full Stack Web Developer">
-      <link rel="shortcut icon" href="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675071355/Portfolio/me1_xkm4qu.png" type="image/x-icon" class="avatar-meta">
+      <link rel="shortcut icon" href="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675873644/Doriane%20Chatelain/WhatsApp_Image_2023-02-08_at_17.25.04_fy8yqa.jpg" type="image/x-icon" class="avatar-meta">
         <!-- Facebook Open Graph data -->
       <meta property="og:title" content="Teddy Muller - Full Stack Web Developer" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="www.teddymuller.com" />
-      <meta property="og:image" content="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674630948/Portfolio/teddy_hnonul.jpg" />
+      <meta property="og:image" content="https://img.freepik.com/photos-gratuite/fond-aquarelle-peint-main-forme-ciel-nuages_24972-1095.jpg?w=740&t=st=1675873365~exp=1675873965~hmac=3333ecb230887b4eb153cef53771d5ba492270c51411e90b7403685ee8becac2" />
       <meta property="og:description" content="Full Stack Web Developer" />
       <meta property="og:site_name" content="Teddy MULLER" />
 
@@ -30,7 +30,7 @@
       <meta name="twitter:title" content="Teddy Muller - Full Stack Web Developer">
       <meta name="twitter:description" content="Full Stack Web Developer">
       <meta name="twitter:creator" content="">
-      <meta name="twitter:image:src" content="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675071355/Portfolio/me1_xkm4qu.png">
+      <meta name="twitter:image:src" content="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675873644/Doriane%20Chatelain/WhatsApp_Image_2023-02-08_at_17.25.04_fy8yqa.jpg">
 
       <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
       <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
