--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,8 @@
   <div class="container nav">
     <div class="item-ted">
       <ul>
-        <li><a href="#teddymuller" class="bouton"><strong>Teddy Muller</strong></a></li>
+        <li><a href="#teddymuller" class="bouton"><strong>Doriane CHATELAIN</strong><br>Lady Bird</a></li>
+
       </ul>
     </div>
     <div class="item item--menu">
