--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,21 +14,21 @@
 
       <%# META %>
       <title>Doriane CHATELAIN</title>
-      <meta name="description" content="Full Stack Web Developer">
+      <meta name="description" content="Community Manager">
       <link rel="shortcut icon" href="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675873644/Doriane%20Chatelain/WhatsApp_Image_2023-02-08_at_17.25.04_fy8yqa.jpg" type="image/x-icon" class="avatar-meta">
         <!-- Facebook Open Graph data -->
-      <meta property="og:title" content="Teddy Muller - Full Stack Web Developer" />
+      <meta property="og:title" content="Doriane CHATELAIN - Community Manager" />
       <meta property="og:type" content="website" />
-      <meta property="og:url" content="www.teddymuller.com" />
+      <meta property="og:url" content="www.ladybirdbydc.com" />
       <meta property="og:image" content="https://img.freepik.com/photos-gratuite/fond-aquarelle-peint-main-forme-ciel-nuages_24972-1095.jpg?w=740&t=st=1675873365~exp=1675873965~hmac=3333ecb230887b4eb153cef53771d5ba492270c51411e90b7403685ee8becac2" />
-      <meta property="og:description" content="Full Stack Web Developer" />
-      <meta property="og:site_name" content="Teddy MULLER" />
+      <meta property="og:description" content="Community Manager" />
+      <meta property="og:site_name" content="Doriane CHATELAIN" />
 
       <!-- Twitter Card data -->
       <meta name="twitter:card" content="summary_large_image">
-      <meta name="twitter:site" content="www.teddymuller.com">
-      <meta name="twitter:title" content="Teddy Muller - Full Stack Web Developer">
-      <meta name="twitter:description" content="Full Stack Web Developer">
+      <meta name="twitter:site" content="www.ladybirdbydc.com">
+      <meta name="twitter:title" content="Doriane CHATELAIN - Community Manager">
+      <meta name="twitter:description" content="Community Manager">
       <meta name="twitter:creator" content="">
       <meta name="twitter:image:src" content="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675873644/Doriane%20Chatelain/WhatsApp_Image_2023-02-08_at_17.25.04_fy8yqa.jpg">
 
