--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
 // Your CSS partials
 @import "components/index";
 @import "components/portfolio";
+@import "components/service";
 @import "components/kindwords";
 @import "components/footer";
 @import "pages/index";
