--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,45 @@
     <a href="#contact" class="banner__link">Curious to know more?</a>
   </div>
 </div>
+<div class="container service" id="service">
+  <h2 class="service__title">Services</h2>
+  <h3 class="service__check">Check it out</h3>
+  <hr>
+  <ul class="cards1">
+    <li class="card">
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
+      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    </li>
+    <li class="card">
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
+      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    </li>
+    <li class="card">
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
+      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    </li>
+    <li class="card">
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
+      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    </li>
+    <li class="card">
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
+      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    </li>
+    <li class="card">
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
+      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    </li>
+    <li class="card">
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
+      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    </li>
+    <li class="card">
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
+      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    </li>
+  </ul>
+</div>
 <div class="container portfolio" id="portfolio">
   <h2 class="portfolio__title">Portfolio</h2>
   <h3 class="portfolio__check">Check it out</h3>
