--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
     <div class="item item--menu">
       <button class="btn-menu"><i class="fa-sharp fa-solid fa-bars"></i></button>
         <ul class="menu">
-          <li><a href="#portfolio" class="bouton"><strong>Portfolio</strong></a></li>
+          <li><a href="#service" class="bouton"><strong>Services</strong></a></li>
           <li><a href="#kindwords" class="bouton"><strong>Kind Words</strong></a></li>
           <li><a href="#work" class="bouton"><strong>Work?</strong></a></li>
           <li><a href="mailto:muller.teddy@icloud.com?subject=Contact Portfolio" class="bouton"><strong>Contact</strong></a></li>
