--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       <meta property="og:title" content="Doriane CHATELAIN - Community Manager" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="www.ladybirdbydc.com" />
-      <meta property="og:image" content="https://img.freepik.com/photos-gratuite/fond-aquarelle-peint-main-forme-ciel-nuages_24972-1095.jpg?w=740&t=st=1675873365~exp=1675873965~hmac=3333ecb230887b4eb153cef53771d5ba492270c51411e90b7403685ee8becac2" />
+      <meta property="og:image" content="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675878692/Doriane%20Chatelain/WhatsApp_Image_2023-02-08_at_17.34.14_ak8pog.jpg" />
       <meta property="og:description" content="Community Manager" />
       <meta property="og:site_name" content="Doriane CHATELAIN" />
 
