--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" id="teddymuller">
+<div class="container banner" id="teddymuller">
   <div class="picture-tm container">
     <h1 class="banner__title">Hello! I'm Doriane.</h1>
     <p class="banner__content">I love my Teddy's GOD<br> he's the Best</p>
@@ -10,48 +10,56 @@
   <h3 class="service__check">Check it out</h3>
   <hr>
   <ul class="cards1">
-    <li class="card">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
-      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    <li class="card1">
+      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346"></a>
+      <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
+      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
     </li>
-    <li class="card">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
-      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    <li class="card1">
+      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346" alt="" class="card1__img card1__img--full"></a>
+      <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
+      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
     </li>
-    <li class="card">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
-      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    <li class="card1">
+      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346" alt="" class="card1__img card1__img--full"></a>
+      <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
+      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
     </li>
-    <li class="card">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
-      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    <li class="card1">
+      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346" alt="" class="card1__img card1__img--full"></a>
+      <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
+      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
     </li>
-    <li class="card">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
-      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    <li class="card1">
+      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346" alt="" class="card1__img card1__img--full"></a>
+      <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
+      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
     </li>
-    <li class="card">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
-      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    <li class="card1">
+      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346" alt="" class="card1__img card1__img--full"></a>
+      <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
+      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
     </li>
-    <li class="card">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
-      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    <li class="card1">
+      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346" alt="" class="card1__img card1__img--full"></a>
+      <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
+      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
     </li>
-    <li class="card">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674688734/Portfolio/Work_in_progress_gerf1s.png" alt="" class="card__img card__img--full"></a>
-      <h4 class="card__title"><a href="#" class="" target="">Surprise!</a></h4>
+    <li class="card1">
+      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346" alt="" class="card1__img card1__img--full"></a>
+      <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
+      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
     </li>
   </ul>
 </div>
-<div class="container portfolio" id="portfolio">
-  <h2 class="portfolio__title">Portfolio</h2>
+<div class="container realisation" id="realisation">
+  <h2 class="portfolio__title">Réalisations</h2>
   <h3 class="portfolio__check">Check it out</h3>
   <hr>
-  <ul class="cards">
+  <ul class="cards2">
     <li class="card">
-      <a href="http://www.myinvest.shop" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1670506228/development/MI_xerwzg.png" alt="" class="card__img card__img--full"></a>
-      <h4 class="card__title"><a href="http://www.myinvest.shop" class="" target="_blank">My invest</a></h4>
+      <a href="#" class="" target="_blank"><img src="https://img.freepik.com/photos-premium/coccinelle-fleurs-blanches_719223-14.jpg?w=1800" alt="" class="card__img card__img--full"></a>
+      <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
       <a href="http://www.certificate2022-teddymuller.art" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1674680034/Portfolio/Capture_d_e%CC%81cran_2023-01-25_a%CC%80_21.53.27_mna3xe.png" alt="" class="card__img card__img--full"></a>
@@ -106,7 +114,7 @@
         <div class="card-kind-int">
           <p>“Recommandation coming !!!”</p>
           <div class="card-kind-info">
-            <img src="https://ca.slack-edge.com/T02NE0241-U026X5M7BHB-e0c63f662462-192" alt="" class="avatar-xlarge">
+            <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675878692/Doriane%20Chatelain/WhatsApp_Image_2023-02-08_at_17.34.14_ak8pog.jpg" alt="" class="avatar-xlarge">
             <h5>Fabrice Tuilliere <br> Batch Manager WAGON Nice</h5>
           </div>
         </div>
