--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -40,7 +40,7 @@
     a{
       text-decoration: none;
       font-size: 20px;
-      color: #1AABAC;
+      color: #B6D7E5;
       &:hover{
         transition: 400ms;
         color: #EC2E57;
@@ -50,7 +50,7 @@
     }
   }
   .btn-menu{
-    color: #1AABAC;
+    color: #B6D7E5;
     border: none;
     background-color: #F8F9FA;
     font-size: 25px;
