--- a/app/assets/stylesheets/components/_realisation.scss
+++ b/app/assets/stylesheets/components/_realisation.scss
@@ -1,7 +1,6 @@
-.service{
-  background-color: white;
+.realisation{
   &__title{
-    padding-top: 80px;
+    margin-top: 80px;
     font-family: "Proxima Nova", sans-serif;
     font-size: 50px;
     font-weight: bold;
@@ -21,12 +20,12 @@ hr{
   font-weight: bold;//comment le rendre bold?
 }
 
-.cards1 {
+.cards2 {
   font-family: "Proxima Nova", sans-serif;
   flex-grow: 1;
   display: grid;
-  grid-gap: 30px;
-  padding: 20px 20px 20px 0;
+  // grid-gap: 30px;
+  // padding: 20px 20px 20px 0;
 
   @media screen and (min-width: 320px) {
     grid-template-columns: 1fr;
@@ -42,13 +41,12 @@ hr{
 
 }
 
-  .card1 {
+  .card {
     font-family: "Proxima Nova", sans-serif;
     background-size: cover;
     background-position: center;
     width: 100%;
     display: flex;
-    flex-direction: column;
     align-items: center;
     overflow: hidden;
     color: rgb(0, 0, 0);
@@ -62,19 +60,16 @@ hr{
     }
     img{
       object-fit: cover;
-      width: 200px;
-      border-radius: 50%;
+      width: 100%;
+      height: 400px;
     }
 
     a{
       text-decoration: none;
       font-size: 20px;
       color: #000000;
-      // display: inline-block;
+      display: inline-block;
       width: 100%;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
       &:hover{
         transition:all 400ms;
         color: #EC2E57;
