--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <header class="position">
-  <nav class="nav">
+  <nav class="nav container">
   <div class="container nav">
     <div class="item-ted">
       <ul>
@@ -11,7 +11,7 @@
       <button class="btn-menu"><i class="fa-sharp fa-solid fa-bars"></i></button>
         <ul class="menu">
           <li><a href="#service" class="bouton"><strong>Services</strong></a></li>
-          <li><a href="#kindwords" class="bouton"><strong>Kind Words</strong></a></li>
+          <li><a href="#realisation" class="bouton"><strong>Realisations</strong></a></li>
           <li><a href="#work" class="bouton"><strong>Work?</strong></a></li>
           <li><a href="mailto:muller.teddy@icloud.com?subject=Contact Portfolio" class="bouton"><strong>Contact</strong></a></li>
       </ul>
