--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,9 +6,9 @@
   </div>
 </div>
 <div class="container service" id="service">
-  <h2 class="service__title">Services</h2>
-  <h3 class="service__check">Check it out</h3>
-  <hr>
+  <%# <h2 class="service__title">Services</h2> %>
+  <%# <h3 class="service__check">Check it out</h3>
+  <hr> %>
   <ul class="cards1">
     <li class="card1">
       <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346"></a>
@@ -52,11 +52,13 @@
     </li>
   </ul>
 </div>
+<div class="container separation">
+</div>
 <div class="container realisation" id="realisation">
-  <h2 class="portfolio__title">Réalisations</h2>
-  <h3 class="portfolio__check">Check it out</h3>
+  <h2 class="realisation__title">Réalisations</h2>
+  <h3 class="realisation__check">Check it out</h3>
   <hr>
-  <ul class="cards2">
+  <ul class="cards">
     <li class="card">
       <a href="#" class="" target="_blank"><img src="https://img.freepik.com/photos-premium/coccinelle-fleurs-blanches_719223-14.jpg?w=1800" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
