--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,9 +9,10 @@
 
 // Your CSS partials
 @import "components/index";
-@import "components/portfolio";
 @import "components/service";
+@import "components/separation";
 @import "components/kindwords";
+@import "components/realisation";
 @import "components/footer";
 @import "pages/index";
 @import "pages/home";
