--- a/app/assets/stylesheets/components/_realisation.scss
+++ b/app/assets/stylesheets/components/_realisation.scss
@@ -1,6 +1,7 @@
 .realisation{
+  background-color: white;
   &__title{
-    margin-top: 80px;
+    padding-top: 80px;
     font-family: "Proxima Nova", sans-serif;
     font-size: 50px;
     font-weight: bold;
@@ -20,12 +21,12 @@ hr{
   font-weight: bold;//comment le rendre bold?
 }
 
-.cards2 {
+.cards {
   font-family: "Proxima Nova", sans-serif;
   flex-grow: 1;
   display: grid;
-  // grid-gap: 30px;
-  // padding: 20px 20px 20px 0;
+  grid-gap: 30px;
+  padding: 20px 20px 20px 0;
 
   @media screen and (min-width: 320px) {
     grid-template-columns: 1fr;
@@ -36,7 +37,7 @@ hr{
   }
 
   @media screen and (min-width: 1440px) {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 
 }
