--- a/app/assets/stylesheets/components/_service.scss
+++ b/app/assets/stylesheets/components/_service.scss
@@ -26,7 +26,8 @@ hr{
   flex-grow: 1;
   display: grid;
   grid-gap: 30px;
-  padding: 20px 20px 20px 0;
+  padding: 20px 20px 20px 20px;
+  margin: 0;
 
   @media screen and (min-width: 320px) {
     grid-template-columns: 1fr;
@@ -55,6 +56,7 @@ hr{
     border-radius: 0px;
     transition: box-shadow 250ms;
     border: none;
+
     &__title{
       margin: 20px;
       font-size: 10px;
@@ -80,5 +82,8 @@ hr{
         color: #EC2E57;
         // opacity: 1;
       }
+    }
+    p{
+      padding: 10px;
     }
   }
