--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,9 @@
-<div class="footer" id="contact">
+<div class="footer container" id="contact">
   <div class="container footer">
     <div class="item-2022">
       <ul>
         <li>
-          <p> ® 2022 Teddy Muller</p>
+          <p> ® 2022 Doriane CHATELAIN</p>
         </li>
       </ul>
     </div>
