--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -41,7 +41,7 @@
     a{
       text-decoration: none;
       font-size: 20px;
-      color: #1AABAC;
+      color: #B6D7E5;
       &:hover{
         transition: 400ms;
         color: #EC2E57;
