--- a/app/assets/stylesheets/components/_realisation.scss
+++ b/app/assets/stylesheets/components/_realisation.scss
@@ -18,15 +18,15 @@ hr{
   width: 80px;
   size: 10px;
   margin-top: 30px;
-  font-weight: bold;//comment le rendre bold?
+  font-weight: bold;
 }
 
 .cards {
   font-family: "Proxima Nova", sans-serif;
   flex-grow: 1;
   display: grid;
-  grid-gap: 30px;
-  padding: 20px 20px 20px 0;
+  // grid-gap: 30px;
+  // padding: 20px 20px 20px 0;
 
   @media screen and (min-width: 320px) {
     grid-template-columns: 1fr;
@@ -37,7 +37,7 @@ hr{
   }
 
   @media screen and (min-width: 1440px) {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
   }
 
 }
