--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,7 +19,7 @@
     font-size: 20px;
     color: white;
     &:hover{
-      color:#EC2E57;
+      color:#DF5650;
     }
   }
 }
@@ -41,6 +41,6 @@
     opacity: 0.5;
   }
   &:after{
-    color: #EC2E57;
+    color: #DF5650;
   }
 }
