--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
           <li><a href="#service" class="bouton"><strong>Services</strong></a></li>
           <li><a href="#realisation" class="bouton"><strong>Realisations</strong></a></li>
           <li><a href="#work" class="bouton"><strong>Work?</strong></a></li>
-          <li><a href="mailto:muller.teddy@icloud.com?subject=Contact Portfolio" class="bouton"><strong>Contact</strong></a></li>
+          <li><a href="mailto:ladybirdbydc@gmail.com?subject=Contact WEBSITE" class="bouton"><strong>Contact</strong></a></li>
       </ul>
     </div>
     </div>
