--- a/app/assets/stylesheets/components/_realisation.scss
+++ b/app/assets/stylesheets/components/_realisation.scss
@@ -5,7 +5,7 @@
     font-family: "Proxima Nova", sans-serif;
     font-size: 50px;
     font-weight: bold;
-    color: #EC2E57
+    color: #DF5650
   }
   &__check{
     margin-top: 20px;
@@ -25,6 +25,8 @@ hr{
   font-family: "Proxima Nova", sans-serif;
   flex-grow: 1;
   display: grid;
+  margin: 0;
+  padding: 0;
   // grid-gap: 30px;
   // padding: 20px 20px 20px 0;
 
@@ -73,7 +75,7 @@ hr{
       width: 100%;
       &:hover{
         transition:all 400ms;
-        color: #EC2E57;
+        color: #DF5650;
         // opacity: 1;
       }
     }
