--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,12 +9,12 @@
     </div>
     <div class="item-contact">
       <ul>
-        <li><a href="mailto:muller.teddy@icloud.com?subject=Contact Portfolio">Send me an email</a></li>
-        <li><a href="https://github.com/M-Teddy/" target="_blank"><i class="fab fa-github"></i></a></li>
-        <%# <li><a href="#" id="insta"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="#" class="facebook"><i class="fab fa-facebook"></i></a></li>
-        <li><a href="#" class="twitter"><i class="fab fa-twitter"></i></a></li> %>
-        <li><a href="https://www.linkedin.com/in/teddy-muller/" class="linkedin" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+        <li><a href="mailto:ladybirdbydc@gmail.com?subject=Contact WEBSITE" target="_blank">Send me an email</a></li>
+        <%# <li><a href="https://github.com/M-Teddy/" target="_blank"><i class="fab fa-github"></i></a></li> %>
+        <li><a href="https://www.instagram.com/ladybird_bydc/" id="insta" target="_blank"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="#" class="facebook"><i class="fab fa-facebook" target="_blank"></i></a></li>
+        <%# <li><a href="#" class="twitter"><i class="fab fa-twitter" target="_blank"></i></a></li> %>
+        <li><a href="https://www.linkedin.com/in/dorianechatelain/" class="linkedin" target="_blank"><i class="fab fa-linkedin"></i></a></li>
       </ul>
     </div>
   </div>
