--- a/app/assets/stylesheets/components/_realisation.scss
+++ b/app/assets/stylesheets/components/_realisation.scss
@@ -1,5 +1,6 @@
 .realisation{
   background-color: white;
+  padding: 0;
   &__title{
     padding-top: 80px;
     font-family: "Proxima Nova", sans-serif;
