--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,6 +7,7 @@
   color: white;
 }
 .banner{
+  cursor: url("https://res.cloudinary.com/dezfv3vmn/image/upload/v1675893342/Doriane%20Chatelain/10287628301579606334-128_pfvcnn.png"), pointer;
   &__title{
     font-size: 50px;
     color: white;
