--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,42 +11,42 @@
   <hr> %>
   <ul class="cards1">
     <li class="card1">
-      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346"></a>
+      <a href="#0" class="" target=""><img src=" https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/identite%CC%81_visuelle_ddqhgt.png"></a>
+      <h4 class="card1__title"><a href="#0" class="" target="">Identités visuelles</a></h4>
+      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
+    </li>
+    <li class="card1">
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/print_g8hw36.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
       <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
     </li>
     <li class="card1">
-      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346" alt="" class="card1__img card1__img--full"></a>
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/reseaux_sociaux_cnobni.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
       <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
     </li>
     <li class="card1">
-      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346" alt="" class="card1__img card1__img--full"></a>
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959458/Doriane%20Chatelain/picto%20%28service%29/redaction_xbefuk.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
       <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
     </li>
     <li class="card1">
-      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346" alt="" class="card1__img card1__img--full"></a>
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/photos_oyspmy.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
       <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
     </li>
     <li class="card1">
-      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346" alt="" class="card1__img card1__img--full"></a>
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959458/Doriane%20Chatelain/picto%20%28service%29/video_ciqdlw.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
       <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
     </li>
     <li class="card1">
-      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346" alt="" class="card1__img card1__img--full"></a>
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959456/Doriane%20Chatelain/picto%20%28service%29/evenementiel_m3uhuu.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
       <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
     </li>
     <li class="card1">
-      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346" alt="" class="card1__img card1__img--full"></a>
-      <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
-      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
-    </li>
-    <li class="card1">
-      <a href="#" class="" target=""><img src="https://img.freepik.com/vecteurs-libre/coccinelle-dessine-main-isole-fond-blanc_53876-135.jpg?w=1380&t=st=1675876280~exp=1675876880~hmac=c1fd663cd3c9ff3dbcb969f001c82b8e1442f2847ded0cc239196498efe28346" alt="" class="card1__img card1__img--full"></a>
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/traduction_r9fagi.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title"><a href="#" class="" target="">LadyBird</a></h4>
       <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
     </li>
@@ -61,35 +61,39 @@
   <hr> %>
   <ul class="cards">
     <li class="card">
-      <a href="#0" role="button" data-target="#modal" data-toggle="modal"><img src="https://img.freepik.com/photos-premium/coccinelle-fleurs-blanches_719223-14.jpg?w=1800" alt="" class="card__img card__img--full"></a>
+      <a href="#0" role="button" data-target="#modal" data-toggle="modal"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/LAVERIE_SAINTE_MAXIME_nufais.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
-      <a href="#0" role="button" data-target="#modal2" data-toggle="modal"><img src="https://img.freepik.com/photos-premium/coccinelle-fleurs-blanches_719223-14.jpg?w=1800" alt="" class="card__img card__img--full"></a>
+      <a href="#0" role="button" data-target="#modal2" data-toggle="modal"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957574/Doriane%20Chatelain/logo%20client%20%28realisation%29/SAYM_d4j9vh.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
-      <a href="#" class="" target="_blank"><img src="https://img.freepik.com/photos-premium/coccinelle-fleurs-blanches_719223-14.jpg?w=1800" alt="" class="card__img card__img--full"></a>
+      <a href="#0" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/AGENT_IMMO_gdea58.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
-      <a href="#" class="" target="_blank"><img src="https://img.freepik.com/photos-premium/coccinelle-fleurs-blanches_719223-14.jpg?w=1800" alt="" class="card__img card__img--full"></a>
+      <a href="#0" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/esteticista_j1um0y.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
-      <a href="#" class="" target="_blank"><img src="https://img.freepik.com/photos-premium/coccinelle-fleurs-blanches_719223-14.jpg?w=1800" alt="" class="card__img card__img--full"></a>
+      <a href="#0" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/LOGO_CAT_pjoujl.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
-      <a href="#" class="" target="_blank"><img src="https://img.freepik.com/photos-premium/coccinelle-fleurs-blanches_719223-14.jpg?w=1800" alt="" class="card__img card__img--full"></a>
+      <a href="#0" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/events2spain_ghvlu6.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
-      <a href="#" class="" target="_blank"><img src="https://img.freepik.com/photos-premium/coccinelle-fleurs-blanches_719223-14.jpg?w=1800" alt="" class="card__img card__img--full"></a>
+      <a href="#0" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957574/Doriane%20Chatelain/logo%20client%20%28realisation%29/reves_jox9ys.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
-      <a href="#" class="" target="_blank"><img src="https://img.freepik.com/photos-premium/coccinelle-fleurs-blanches_719223-14.jpg?w=1800" alt="" class="card__img card__img--full"></a>
+      <a href="#0" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957574/Doriane%20Chatelain/logo%20client%20%28realisation%29/mcs_gcy06a.png" alt="" class="card__img card__img--full"></a>
+      <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
+    </li>
+    <li class="card">
+      <a href="#0" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/4EVENT_ttvqdy.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
   </ul>
