--- a/app/assets/stylesheets/components/_service.scss
+++ b/app/assets/stylesheets/components/_service.scss
@@ -56,6 +56,7 @@ hr{
     border-radius: 0px;
     transition: box-shadow 250ms;
     border: none;
+    padding-top: 20px;
 
     &__title{
       margin: 20px;
@@ -64,7 +65,7 @@ hr{
     }
     img{
       object-fit: cover;
-      width: 200px;
+      width: 100px;
       border-radius: 50%;
     }
 
