--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -19,7 +19,7 @@
       color: #000000;
       &:hover{
         transition: 400ms;
-        color: #DF5650;
+        color: #fbA8A8;
         opacity: 1;
         text-decoration: underline;
       }
@@ -43,7 +43,7 @@
       color: #B6D7E5;
       &:hover{
         transition: 400ms;
-        color: #EC2E57;
+        color: #fbA8A8;
         opacity: 1;
         text-decoration: underline;
       }
