--- a/app/assets/stylesheets/components/_realisation.scss
+++ b/app/assets/stylesheets/components/_realisation.scss
@@ -7,7 +7,7 @@
     font-family: "Proxima Nova", sans-serif;
     font-size: 50px;
     font-weight: bold;
-    color: #DF5650
+    color: #fbA8A8;
   }
   &__check{
     margin-top: 20px;
@@ -78,7 +78,7 @@ hr{
       width: 100%;
       &:hover{
         transition:all 400ms;
-        color: #DF5650;
+        color: #fbA8A8;
         // opacity: 1;
       }
     }
