--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,7 +7,7 @@
   color: white;
 }
 .banner{
-  cursor: url("https://res.cloudinary.com/dezfv3vmn/image/upload/v1675893342/Doriane%20Chatelain/10287628301579606334-128_pfvcnn.png"), pointer;
+  cursor: url("https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959917/Doriane%20Chatelain/petit_picto_xluzfh.png"), pointer;
   &__title{
     font-size: 50px;
     color: white;
@@ -20,7 +20,7 @@
     font-size: 20px;
     color: white;
     &:hover{
-      color:#DF5650;
+      color:#fbA8A8;
     }
   }
 }
@@ -42,6 +42,6 @@
     opacity: 0.5;
   }
   &:after{
-    color: #DF5650;
+    color: #fbA8A8;
   }
 }
