--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <%# META %>
       <title>Doriane CHATELAIN</title>
       <meta name="description" content="Community Manager">
-      <link rel="shortcut icon" href="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675873644/Doriane%20Chatelain/WhatsApp_Image_2023-02-08_at_17.25.04_fy8yqa.jpg" type="image/x-icon" class="avatar-meta">
+      <link rel="shortcut icon" href="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675878686/Doriane%20Chatelain/WhatsApp_Image_2023-02-08_at_17.33.53_uoxo64.jpg" type="image/x-icon" class="avatar-meta">
         <!-- Facebook Open Graph data -->
       <meta property="og:title" content="Doriane CHATELAIN - Community Manager" />
       <meta property="og:type" content="website" />
