--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="item-2022">
       <ul>
         <li>
-          <p> ® 2022 Doriane CHATELAIN</p>
+          <p> ® 2023 Créated by Teddy Muller</p>
         </li>
       </ul>
     </div>
