--- a/app/assets/stylesheets/components/_realisation.scss
+++ b/app/assets/stylesheets/components/_realisation.scss
@@ -66,8 +66,12 @@ hr{
     img{
       object-fit: cover;
       width: 100%;
-      height: 400px;
-
+      height: auto;
+      &--full{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        }
     }
 
     a{
