--- a/app/assets/stylesheets/components/_service.scss
+++ b/app/assets/stylesheets/components/_service.scss
@@ -84,6 +84,11 @@ hr{
         // opacity: 1;
       }
     }
+    h4{
+      text-decoration: none;
+      font-size: 20px;
+      color: #000000;
+    }
     p{
       padding: 10px;
     }
