ajustement card clients

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -123,7 +123,7 @@
         <p>Titre de la modale 2</p>
       </div>
       <div class="modal-body">
-        Une belle expérience de plus de 200 projets : logos & identités visuelles, sites Internet, applications mobiles et autres travaux graphiques
+        Une belle expérience avec divers partenaires : logos & identités visuelles, chartre graphique, flyeurs/affiches, réseaux sociaux, traduction et autres travaux graphiques...
       </div>
       <div class="modal-footer">
         <a href="#0" class="btn btn-close" role="button" data-dismiss="dialog"></a>
@@ -133,7 +133,7 @@
   </div>
 </div>
 <div class="container separation" id="work">
-  <p><strong>You have a project?</strong></p>
+  <p>You have a project? Contact me on bottom</p>
   <%# <a href="https://www.malt.fr/profile/teddymuller" class="btn-malt" target="_blank">Malt!</a> %>
 </div>
 
