--- a/app/assets/stylesheets/components/_realisation.scss
+++ b/app/assets/stylesheets/components/_realisation.scss
@@ -1,7 +1,7 @@
 .realisation{
 
-  background-color: white;
-  padding: 0;
+  background-color: #F7F3F4;
+  padding: 0 12px;
   &__title{
     padding-top: 80px;
     font-family: "Proxima Nova", sans-serif;
@@ -58,6 +58,15 @@ hr{
     border-radius: 0px;
     transition: box-shadow 250ms;
     border: none;
+    opacity: 0.2;
+    &:hover{
+      -ms-transform: scale(1.1); /* IE 9 */
+      -webkit-transform: scale(1.1); /* Safari 3-8 */
+      transform: scale(1.1);
+      z-index: 1;
+      border: 4px solid #fbA8A8;
+      opacity: 0.7;
+    }
     &__title{
       margin: 20px;
       font-size: 10px;
@@ -67,6 +76,9 @@ hr{
       object-fit: cover;
       width: 100%;
       height: auto;
+      &:hover{
+
+      }
       &--full{
         width: 100%;
         height: 100%;
@@ -81,9 +93,7 @@ hr{
       display: inline-block;
       width: 100%;
       &:hover{
-        transition:all 400ms;
-        color: #fbA8A8;
-        // opacity: 1;
+
       }
     }
   }
