--- a/app/assets/stylesheets/components/_separation.scss
+++ b/app/assets/stylesheets/components/_separation.scss
@@ -6,12 +6,14 @@ justify-content: center;
 align-items: center;
 text-align: center;
 padding: 0;
+opacity: 1;
 
 p{
   display: flex;
-    align-items: center;
-    flex-direction: column;
-    font-size: 25px;
-
+  align-items: center;
+  flex-direction: column;
+  font-size: 20px;
+  color: #fbA8A8;
+  font-weight : 400;
 }
 }
