--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,13 +3,13 @@
     <div class="item-2022">
       <ul>
         <li>
-          <p> ® 2023 Créated by Teddy Muller</p>
+          <a href="mailto:muller.teddy@icloud.com?subject=Contact via LadyBird By DC" target="_blank">® 2023 Créated by Teddy Muller</a>
         </li>
       </ul>
     </div>
     <div class="item-contact">
       <ul>
-        <li><a href="mailto:ladybirdbydc@gmail.com?subject=Contact WEBSITE" target="_blank">Send me an email</a></li>
+        <li><a href="mailto:ladybirdbydc@gmail.com?subject=Contact WEBSITE" target="_blank"><i class="fa-solid fa-envelope"></i></a></li>
         <%# <li><a href="https://github.com/M-Teddy/" target="_blank"><i class="fab fa-github"></i></a></li> %>
         <li><a href="https://www.instagram.com/ladybird_bydc/" id="insta" target="_blank"><i class="fab fa-instagram"></i></a></li>
         <li><a href="#" class="facebook"><i class="fab fa-facebook" target="_blank"></i></a></li>
